--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-dj-database-url==0.4.1
-Django==1.10.4
-gunicorn==19.6.0
-psycopg2==2.6.2
-whitenoise==3.2
+appdirs==1.4.3
+dj-database-url==0.4.2
+Django==1.11.1
+djangorestframework==3.6.2
+Markdown==2.6.8
+packaging==16.8
+psycopg2==2.7.1
+pyparsing==2.2.0
+pytz==2017.2
+six==1.10.0
+whitenoise==3.3.0
