--- a/metro_scheduler/static/app/package.json
+++ b/metro_scheduler/static/app/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "angular": "^1.6.4",
+    "angular-bootstrap-calendar": "^0.29.0",
+    "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "^4.0.0-alpha.6",
     "gulp": "^3.9.1",
-    "gulp-webpack": "^1.5.0"
+    "gulp-webpack": "^1.5.0",
+    "moment": "^2.18.1",
+    "ngmap": "^1.18.4"
   },
   "devDependencies": {
     "browser-sync": "^2.18.11",
